--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "learning-leptos"
+name = "leptos-example"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 axum = { version = "0.6.2", optional = true }
